--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1331,7 +1331,7 @@ The framework provides the following variables to be set by the port:
 
 `JAVA_VERSION`::
 List of space-separated suitable java versions for the port. An optional `\+`
-allows you to specify a range of versions. (allowed values `8[+]`, `11[\+]`,
+allows specifying a range of versions. (allowed values `8[+]`, `11[\+]`,
 `17[+]`, `18[\+]`, `19[+]`, `20[\+]`, `21[+]`, `22[\+]`, `22[+]`)
 
 `JAVA_OS`::
@@ -1984,7 +1984,7 @@ If the `findplist` argument is provided then contents of the `findlib` target di
 If the `ldconfig` argument is provided then OCaml's [.filename]#ld.conf# file
 will be automatically processed. When `dune` is used Dune may install stublibs
 in site-lib package directory(ies) or in a single directory below `DUNE_LIBDIR` site-lib directory.
-Set if your port installs shared libraries into ocaml
+Set if the port installs shared libraries into ocaml
 
 If the `run` argument is provided add ocamlc to `RUN_DEPENDS`.
 
