report 2025 04-06: fix description of EXTERROR
Reviewed by:	jrm
Sponsored by:	The FreeBSD Foundation
Differential revision:	https://reviews.freebsd.org/D52292

--- a/website/content/en/status/report-2025-04-2025-06/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/freebsd-foundation.adoc
@@ -61,7 +61,7 @@ Here is a sampling of that work and other sponsored efforts:
 * Enhanced ptrace usability by enabling transient PT_ATTACH behavior.
   This reduces friction for debugging tools and eliminates spurious EINTR errors that could interrupt or break tracing workflows.
 * kqueue introspection support by extending man:procstat[1] to report kqueue state, improving observability into how processes use kernel event notification mechanisms
-* Design and implementation of EXTERROR, a kernel-level flag mechanism that signals when extended error information is available.
+* Design and implementation of EXTERROR, a mechanism that reports extended error information to userspace, augmenting the usual errno value.
   This enables applications to retrieve more detailed diagnostics beyond standard error codes.
 
 Other sponsored efforts are covered in separate report entries:
