handbook/cutting-edge: package database backup
The backup may be non-existent, or not recent.

Use the available script, 411.pkg-backup.in

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1157,6 +1157,13 @@ pkg prime-origins | sort -u > /var/tmp/pkg-prime-origins.txt
 
 The list might be useful if an interruption, such as loss of power, occurs during an upgrade.
 
+Also, perform a package database backup: 
+
+[source,shell]
+....
+/usr/local/etc/periodic/daily/411.pkg-backup
+....
+
 ==== Performing Minor version upgrades
 
 Create a folder for custom pkg repository config files, if there is none present already.
