handbook/multimedia: Google Meet works in Firefox
Discussed with:		bcr
Reviewed by:		fernape
Differential Revision:	https://reviews.freebsd.org/D45430

--- a/documentation/content/en/books/handbook/multimedia/_index.adoc
+++ b/documentation/content/en/books/handbook/multimedia/_index.adoc
@@ -580,7 +580,7 @@ FreeBSD currently supports the following tools used to carry out videoconference
 | link:https://teams.live.com[]
 
 | Google Meet
-| Does not work
+| Works
 | Works
 | link:https://meet.google.com/[]
 
