committers-guide: Mention RELNOTES in a couple of places
Reviewed by:	imp, olce, emaste
Differential Revision:	https://reviews.freebsd.org/D52396

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -1395,7 +1395,7 @@ Here 'good' means:
 . All the right files, and none of the wrong ones, were merged into contrib/glorbnitz.
 . No other changes are in the tree.
 . The commit messages look crossref:committers-guide[commit-log-message,good]. It should contain a summary of what's changed since the last merge to the FreeBSD `main` branch and any caveats.
-. UPDATING should be updated if there is anything of note, such as user visible changes, important upgrade concerns, etc.
+. `RELNOTES` and `UPDATING` should be updated if there is anything of note, such as user visible changes, important upgrade concerns, etc.
 
 [NOTE]
 ====
@@ -2653,6 +2653,10 @@ We include the commit title so that the referenced commit can be located even in
 
 |`Relnotes:`
 |If the change is a candidate for inclusion in the release notes for the next release from the branch, set to `yes`.
+|Candidates are user-visible changes, new features, compatibility breaks, etc..
+|If you forget to set this line, or want to provide more details, add an entry to the `RELNOTES` file in the root of the src tree.
+|The `RELNOTES` file is used to generate release notes for the next release.
+|Do not use the `Relnotes:` line to describe the change: its only valid value is `yes`.
 
 |`Security:`
 |If the change is related to a security vulnerability or security exposure, include one or more references or a description of the issue. If possible, include a VuXML URL or a CVE ID.
