--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -871,6 +871,11 @@ gitref:ae3d7e27abc9[repository=src]
 [[network-general]]
 === General Network
 
+The man:ifconfig[8] utility will no longer accept assigning IP addresses to the underlying member interfaces of a man:bridge[4].
+To temporarily bypass this safeguard, use the net.link.bridge.member_ifaddrs man:sysctl[8].
+This sysctl is expected to be removed in FreeBSD 16.
+gitref:b61850c4e6f6[repository=src]
+
 ARP (man:arp[4]) support for 802-standard networks has been restored; it had been accidentally removed with FDDI support.
 (This is different than the Ethernet standard encapsulation.)
 gitref:d776dd5fbd48[repository=src]
