--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1201,7 +1201,7 @@ There are different branches to choose from (by changing the url accordingly):
 
 | main
 | twice daily - 12:00 and 00:00 UTC
-| \https://pkg.freebsd.org/${ABI}/base_latest
+| pkg+https://pkg.freebsd.org/${ABI}/base_latest
 
 | main
 | weekly – Sunday at 12:00 UTC
