--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1213,7 +1213,7 @@ There are different branches to choose from (by changing the url accordingly):
 
 | stable/14
 | weekly – Sunday at 12:00 UTC
-| \https://pkg.freebsd.org/${ABI}/base_weekly
+| pkg+https://pkg.freebsd.org/${ABI}/base_weekly
 
 | releng/14.2
 | twice daily – 12:00 and 00:00 UTC
