--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1217,7 +1217,7 @@ There are different branches to choose from (by changing the url accordingly):
 
 | releng/14.2
 | twice daily – 12:00 and 00:00 UTC
-| \https://pkg.freebsd.org/${ABI}/base_release_2
+| pkg+https://pkg.freebsd.org/${ABI}/base_release_2
 
 | releng/14.3
 | twice daily – 12:00 and 00:00 UTC
