--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1221,7 +1221,7 @@ There are different branches to choose from (by changing the url accordingly):
 
 | releng/14.3
 | twice daily – 12:00 and 00:00 UTC
-| \https://pkg.freebsd.org/${ABI}/base_release_3
+| pkg+https://pkg.freebsd.org/${ABI}/base_release_3
 |===
 
 To upgrade the system, change the configuration file according to the desired release, and run:
