Add "WiFi" to page tags
None of our networking pages have the word wifi on them anywhere, add
"WiFi" to the page tags for now in lieu of a wider update.

Reviewed by:	lwhsu
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D52458

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -4,7 +4,7 @@ part: IV. Network Communication
 prev: books/handbook/firewalls
 next: books/handbook/partv
 description: "Advanced networking in FreeBSD:  basics of gateways and routes, CARP, how to configure multiple VLANs on FreeBSD, etc"
-tags: ["Advanced Networking", "Handbook", "gateway", "routes", "wireless", "tethering", "bluetooth", "bridging", "CARP", "VLAN"]
+tags: ["Advanced Networking", "Handbook", "gateway", "routes", "wireless", "tethering", "bluetooth", "bridging", "CARP", "VLAN", "WiFi"]
 showBookMenu: true
 weight: 39
 params:
