Remove reference to sio(4)
Summary:
sio(4) was removed from the build in 2009 and removed as a driver in
2019 by src commit 71f0077631fa.

Reviewers: #doc_committers

Differential Revision: https://reviews.freebsd.org/D52459

--- a/documentation/content/en/books/handbook/advanced-networking/_index.adoc
+++ b/documentation/content/en/books/handbook/advanced-networking/_index.adoc
@@ -877,7 +877,7 @@ The Bluetooth stack in FreeBSD is implemented using the man:netgraph[4] framewor
 A broad variety of Bluetooth USB dongles is supported by man:ng_ubt[4].
 Broadcom BCM2033 based Bluetooth devices are supported by the man:ubtbcmfw[4] and man:ng_ubt[4] drivers.
 The 3Com Bluetooth PC Card 3CRWB60-A is supported by the man:ng_bt3c[4] driver.
-Serial and UART based Bluetooth devices are supported by man:sio[4], man:ng_h4[4], and man:hcseriald[8].
+Serial and UART based Bluetooth devices are supported by man:ng_h4[4] and man:hcseriald[8].
 
 Before attaching a device, determine which of the above drivers it uses, then load the driver.
 For example, if the device uses the man:ng_ubt[4] driver:
