--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -36,7 +36,7 @@ General discussions about the pending release and known issues should be sent to
 |HEAD slush begins |8 August 2025 |8 August 2025 |Release Engineers announce that further commits to the {localBranchHead} branch will not require explicit approval, however new features should be avoided.
 |{localBranchStable} branch |5 September 2025 |5 September 2025 |{localBranchStable} branch created; future release engineering proceeds on this branch.
 |ALPHA1 builds begin |5 September 2025 |6 September 2025 |First alpha test snapshot.
-|ALPHA2 builds begin |12 September 2025 |- |Second alpha test snapshot.
+|ALPHA2 builds begin |12 September 2025 |14 September 2025 |Second alpha test snapshot.
 |ALPHA3 builds begin |19 September 2025 |- |Third alpha test snapshot.
 |ALPHA4 builds begin |26 September 2025 |- |Fourth alpha test snapshot.
 |{localBranchReleng} branch |3 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
