--- a/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
@@ -3,10 +3,10 @@
 Contact: Martin Filla <freebsd@sysctl.cz>
 Wiki:	 https://wiki.freebsd.org/arm/Bananapi
 
-=== Introduction
+==== Introduction
 The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, dual-core ~1.35 GHz) featuring 4× Gigabit LAN, 1× Gigabit WAN, Wi-Fi (4×4n), Bluetooth 5.0, and multiple peripheral interfaces (UART, SPI, I²C, GPIO, SATA, mini-PCIe, eMMC, etc.).
 
-=== Current State of FreeBSD Support
+==== Current State of FreeBSD Support
 - Implemented so far:
   * **UART driver**
   * **Clock management (clocks)**
@@ -14,11 +14,11 @@ The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, 
 
 Other essential components—Ethernet, USB, SATA, Wi-Fi, etc.—are not yet implemented.
 
-=== Technical Context and Significance
-Banana Pi R64 is a flexible platform suited for embedded and router use, with rich peripheral support. Establishing FreeBSD compatibility would open possibilities for deploying FreeBSD in modern networking and appliance roles, especially given its reliability and network stack.
+==== Technical Context and Significance
+Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks drivers exist but ppl clock is under development, gpio is under development -- while most critical subsystems remain unimplemented.
 
-=== Development roadmap
-* implement missing drivers
+==== Development roadmap
+* Implement missing drivers
   - Ethernet (GMAC ports)
   - USB (XHCI/OTG)
   - SATA / AHCI
@@ -26,6 +26,5 @@ Banana Pi R64 is a flexible platform suited for embedded and router use, with ri
   - Wi-Fi (likely MediaTek MT7615)
   - GPIO subsystems
 
-=== Conclusion
+==== Conclusion
 Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks drivers exist but ppl clock is under develoment, gpio is under development—while most critical subsystems remain unimplemented. Publishing working code and artifacts, plus active collaboration with the FreeBSD community, will be essential to bring this board toward usable status under FreeBSD.
-
