bananapi-r64-drivers.adoc: typo fix

--- a/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
@@ -27,4 +27,4 @@ Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks dr
   - GPIO subsystems
 
 ==== Conclusion
-Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks drivers exist but ppl clock is under develoment, gpio is under development—while most critical subsystems remain unimplemented. Publishing working code and artifacts, plus active collaboration with the FreeBSD community, will be essential to bring this board toward usable status under FreeBSD.
+Support for Banana Pi R64 in FreeBSD is in the early stages—UART and clocks drivers exist but ppl clock is under development, gpio is under development—while most critical subsystems remain unimplemented. Publishing working code and artifacts, plus active collaboration with the FreeBSD community, will be essential to bring this board toward usable status under FreeBSD.
