new committer (doc/ru): Vladlen Popolitov (vladlen)
Summary:
Complete steps for new committers from the committer's guide:

1. Add myself to shared/authors.adoc.
2. Add myself to shared/contrib-committers.adoc.
3. Add a news entry.
4. Add my PGP key.

Reviewed by:    maxim (mentor)
Approved by:    maxim (mentor)
Differential Revision:  https://reviews.freebsd.org/D52556

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -1080,6 +1080,9 @@ include::{include-path}jdp.key[]
 === `{krion}`
 include::{include-path}krion.key[]
 
+=== `{vladlen}`
+include::{include-path}vladlen.key[]
+
 === `{sepotvin}`
 include::{include-path}sepotvin.key[]
 
