--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -3571,6 +3571,10 @@
 :vkashyap-email: vkashyap@FreeBSD.org
 :vkashyap: {vkashyap-name} <{vkashyap-email}>
 
+:vladlen-name: Vladlen Popolitov
+:vladlen-email: vladlen@FreeBSD.org
+:vladlen: {vladlen-name} <{vladlen-email}>
+
 :vmaffione-name: Vincenzo Maffione
 :vmaffione-email: vmaffione@FreeBSD.org
 :vmaffione: {vmaffione-name} <{vmaffione-email}>
