--- a/website/content/en/releases/14.3R/errata.adoc
+++ b/website/content/en/releases/14.3R/errata.adoc
@@ -57,6 +57,9 @@ For a list of all FreeBSD CERT security advisories, see https://www.FreeBSD.org/
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:12.efi.asc[FreeBSD-EN-25:12.efi] |8 August 2025 |bsdinstall(8) not copying the correct loader on systems with
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:13.wlan_tkip.asc[FreeBSD-EN-25:13.wlan_tkip] |8 August 2025 |net80211 TKIP crypto support fails for some drivers
 |link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:14.route.asc[FreeBSD-EN-25:14.route] |8 August 2025 |route(8) monitor buffers too much when redirected to a file
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:15.arm64.asc[FreeBSD-EN-25:15.arm64] |16 September 2025 |arm64 syscall(2) allows unprivileged user to panic kernel
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:16.vfs.asc[FreeBSD-EN-25:16.vfs] |16 September 2025 |copy_file_range(2) fails to set output parameters
+|link:https://www.FreeBSD.org/security/advisories/FreeBSD-EN-25:17.bnxt.asc[FreeBSD-EN-25:17.bnxt] |16 September 2025 |bnxt(4) fails to set media type in some cases
 |===
 
 [[open-issues]]
