new committer (src): Jaeyoon Choi (jaeyoon)
Complete steps 1-4 for new committers from the committer's guide:

1. Add myself to doc/shared/authors.adoc
2. Add myself to doc/shared/contrib-committers.adoc
3. Add a news entry
4. Add my PGP key

Reviewed By:	imp (mentor)
Approved by:	imp (mentor)
Differential Revision: https://reviews.freebsd.org/D52569

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1451,6 +1451,10 @@
 :jadawin-email: jadawin@FreeBSD.org
 :jadawin: {jadawin-name} <{jadawin-email}>
 
+:jaeyoon-name: Jaeyoon Choi
+:jaeyoon-email: jaeyoon@FreeBSD.org
+:jaeyoon: {jaeyoon-name} <{jaeyoon-email}>
+
 :jah-name: Jason A. Harmening
 :jah-email: jah@FreeBSD.org
 :jah: {jah-name} <{jah-email}>
